# Tide-Sweeper

./: .gitignore  CMakeLists.txt  README.md
Tests/: CollisionTest.cpp  test_collision.cpp  test_example.cpp  test_level.cpp  test_litter.cpp  test_mocks.h  test_rendering.cpp  test_reset.cpp  test_score_render.cpp  test_submarine.cpp
include/: ChatUI.h  Enemies.h  GameManager.h  GameOverScreen.h  Level.h  Litter.h  Menu.hpp  Messages.h  Player.h  ScoreDisplay.hpp  Scoreboard.h  StoryManager.h  Submarine.h  TrashCluster.h  VictoryScreen.h
src/: ChatUI.cpp  Enemies.cpp  GameManager.cpp  GameOverScreen.cpp  Level.cpp  Litter.cpp  Litter.h  Menu.cpp  Menu.hpp  Messages.cpp  ScoreDisplay.cpp  ScoreDisplay.hpp  Scoreboard.cpp  StoryManager.cpp  Submarine.cpp  TrashCluster.cpp  VictoryScreen.cpp  main.cpp  test.cpp  test_score.cpp
